# todo_site

./: .gitignore  README.md
backend/: .env  Cargo.toml  Dockerfile  complete.md  main.rs  models.rs  repositories.rs  req  todo
backend/migrations/: 20260208143637_create_databse.sql  20260214092752_init.sql
backend/models/: project.rs  task.rs
backend/repositories/: task_repo.rs
backend/routes/: tasks.rs
backend/src/: main.rs  models.rs  repo.rs  routes.rs  types.rs
backend/src/models/: job.rs  project.rs  tag.rs
backend/src/repo/: job_repo.rs  project_repo.rs  task_repo.rs
backend/src/repositories/: project_repo.rs  task_repo.rs
backend/src/routes/: jobs.rs  projects.rs  tasks.rs
fontend/: package-lock.json  package.json  vite.config.ts
fontend/src/: App.vue  main.ts  types.ts
fontend/src/assets/: main.css
fontend/src/components/: Card.vue  InputField.vue  Navbar.vue  ProjectList.vue  SoftBackdrop.vue  TaskCard.vue
fontend/src/router/: index.ts
fontend/src/views/: HomeView.vue  ProjectTasksView.vue  TasksView.vue
frontend/: index.html  netlify.toml  vite.config.ts
frontend/public/: _redirects
frontend/src/: main.ts
frontend/src/components/: InputField.vue  Loading.vue  Navbar.vue  ProjectList.vue  TaskCards.vue  ThemeButton.vue
frontend/src/views/: HomeView.vue  TasksView.vue
